--- a/package.json
+++ b/package.json
@@ -21,10 +21,25 @@
   },
   "homepage": "https://github.com/iivnn/bugtracker-server#readme",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.11",
+    "@types/express-session": "^1.17.3",
     "@types/node": "^14.14.35",
+    "@types/passport": "^1.0.6",
+    "@types/passport-local": "^1.0.33",
     "nodemon": "^2.0.7",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "helmet": "^4.4.1",
+    "mongoose": "^5.12.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
